--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,6 +56,17 @@ h1 {
   text-align: center;
 }
 
+section#matches-title h1 {
+  background-color: white;
+  font-size: 2.6em;
+  padding: 10px;
+  text-align: center;
+}
+
+section#matches-list {
+  margin: 10px 0px;
+}
+
 section#intro {
   border: 4px solid cadetblue;
   border-radius: 10px;
@@ -98,8 +109,9 @@ section#card-match img {
 button {
   background-color: cadetblue;
   border: none;
-  color: darkmagenta;
+  color: rgb(82, 21, 78);
   display: block;
+  font-size: 1.2em;
   margin-top: 20px;
   width: 125px;
   height: 50px;
@@ -126,6 +138,12 @@ footer>nav img {
 
 span#footer-nav-spacer {
   width: 175px;
+}
+
+footer h3 {
+  font-size: 1.2em;
+  margin: 10px 0px;
+  text-align: center;
 }
 
 /* Animations */
