--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,6 +82,10 @@ section#intro p {
   text-align: right;
 }
 
+div#left-card-back {
+  background-color: rgb(82, 21, 78);
+}
+
 section#card-match {
   align-items: center;
   display: flex;
@@ -95,6 +99,7 @@ div.card {
   margin: 25px;
   width: 250px;
   height: 350px;
+  transform-style: preserve-3d;
 }
 
 section#card-match img {
@@ -210,6 +215,44 @@ footer {
   clear: left;
 }
 
+/* Dynamically Rendered Matches */
+section#matches-list {
+  align-items: center;
+}
+
+section.match-section {
+  max-width: 75%;
+  border: 4px solid cadetblue;
+  border-radius: 10px;
+  margin: 10px auto;
+  padding: 10px;
+}
+
+section.match-images {
+  display: flex;
+  justify-content: center;
+}
+
+section.match-images img {
+  max-width: 30%;
+  align-self: center;
+  margin-bottom: 30px;
+}
+
+section.match-images img.left-match-image {
+  margin-right: 15px;
+}
+
+section.match-images img.right-match-image {
+  margin-left: 15px;
+}
+
+section.story-section {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+  padding: 0px 15px;
+}
+
 /* Animations */
 .left-presentation {
   animation-name: leftCardPresentation;
@@ -243,6 +286,20 @@ footer {
   animation-name: nonMatchRightCard;
   animation-duration: 1.0s;
   animation-fill-mode: forwards;
+}
+
+.left-card-flip {
+  animation-name: flipLeftCard;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  transform-style: preserve-3d;
+}
+
+.right-card-flip {
+  animation-name: flipRightCard;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  transform-style: preserve-3d;
 }
 
 /* Keyframes */
@@ -294,5 +351,18 @@ footer {
   }
   100% {
     transform: translate(65vw, 100vw) rotate(60deg);
+  }
+}
+
+/* 3D Rotations */
+@keyframes flipLeftCard {
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
+@keyframes flipRightCard {
+  100% {
+    transform: rotateY(-180deg);
   }
 }
