--- a/CSS/style.css
+++ b/CSS/style.css
@@ -89,9 +89,22 @@ section#card-match {
   vertical-align: middle;  
 }
 
-div.card {
+div#left-card {
   border: 4px solid cadetblue;
   border-radius: 10px;
+  cursor: pointer;
+  margin: 25px;
+  width: 250px;
+  height: 350px;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
+
+div#right-card {
+  border: 4px solid cadetblue;
+  border-radius: 10px;
+  cursor: pointer;
   margin: 25px;
   width: 250px;
   height: 350px;
@@ -115,13 +128,18 @@ div.card {
   /* bottom: 0px; */
   width: 100%;
   height: 100%;
-  color: white;
-  font-size: 2.0em;
   text-align: center;
   vertical-align: middle;
   background-color: rgb(82, 21, 78);
   transform: scale(-1, 1);
   z-index: 1;
+}
+
+.cat-bio {
+  color: white;
+  font-size: 1.35em;
+  text-align: left;
+  padding: 10px;
 }
 
 section#card-match img {
