--- a/CSS/style.css
+++ b/CSS/style.css
@@ -95,8 +95,22 @@ section#card-match {
   vertical-align: middle;  
 }
 
+.cat-match-title{
+  font-size: 2.5em;
+  font-family:'Nunito', sans-serif; 
+  color: rgb(104, 104, 105);
+  text-transform: uppercase;
+  text-align: center;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
 
-
+.story-section{
+  font-size: 2em;
+  line-height: 25px;
+  color:rgb(80, 80, 82);
+  font-family: 'Nunito', sans-serif; 
+}
 .card-front {
   backface-visibility: hidden;
   /* bottom: 0px; */
@@ -106,8 +120,53 @@ section#card-match {
   width: 100%;
   z-index: 2;
 }
-
-
+form{
+  font-size: 1.5em;
+  color: rgb(104, 104, 105);
+  font-family: 'Nunito', sans-serif;
+  padding: 2px;
+}
+div#left-card {
+  border: 4px solid cadetblue;
+  
+  border-radius: 10px;
+  height: 350px;
+  margin: 25px;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+  width: 250px;
+}
+div#right-card {
+  border: 4px solid cadetblue;
+  border-radius: 10px;
+  height: 350px;
+  width:350px;
+  margin: 25px;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+  width: 250px;
+  
+}
+.card-back {
+  position: absolute;
+  /* bottom: 0px; */
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 1em;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  vertical-align: middle;
+  background-color: rgb(82, 21, 78);
+  transform: scale(-1, 1);
+  z-index: 1;
+  }
+  
+ 
+  
+  
 
 .cat-bio {
   color: white;
@@ -252,26 +311,25 @@ section.bio img:not(.icon-image) {
   font-family: 'Nunito', sans-serif;
   text-align: right;
   color: rgb(54, 54, 54);
-  
- 
   padding-right: 10px;
 }
+
 #meowmatch{
   color: cadetblue;
   font-size: 1.45em;
-  
 }
  #paul{
    color:  rgb(231, 231, 231);
    -webkit-text-stroke: 1.5px rgb(54, 54, 54);
    font-style: italic;
-   }
+}
 
 #lulu {
   color:  rgb(231, 231, 231);
    -webkit-text-stroke: 1.5px rgb(54, 54, 54);
    font-style: italic;
 }
+
 #chris{
   color:  rgb(231, 231, 231);
    -webkit-text-stroke: 1.5px rgb(54, 54, 54);
@@ -288,37 +346,25 @@ section.bio img:not(.icon-image) {
   line-height: 32px;
   color:  rgb(231, 231, 231);
 }
+
 #bio-ppaul:hover{
   position:relative;
   line-height: 32px;
   color:  rgb(54, 54, 54);
   transition: 5s;
-
 }
-/* #bottompaul{
-  height: 333px;
-  left: 120px;
-  z-index: -1;
-  position: absolute; 
-  top: 755px;
-  width: 350px;
-  
-} */
+
 #bio-plulu{
   line-height: 30px;
   color:  rgb(231, 231, 231);
 }
+
 #bio-plulu:hover{
   line-height: 30px;
   color:  rgb(54, 54, 54);
   transition: 5s;
 }
-/* #bottomlulu{
-  position: absolute;
-  left:120px;
-  z-index:-1;
-  height: 250px;
-} */
+
 #bio-pchris{
   line-height: 32px;
   color:  rgb(231, 231, 231);
@@ -328,19 +374,13 @@ section.bio img:not(.icon-image) {
   color:  rgb(54, 54, 54);
   transition: 5s;
 }
-/* #bottomchris{
-  position: absolute;
-  z-index: -1;
-  height:250px;
-  left: 120px;
-  top: 1794px;
-} */
+
 #bio-p:hover{
   font-family: 'Nunito', sans-serif;
   color:black;
   transition: 1.5s;
-
 }
+
 section.bio {
   border: 4px solid cadetblue;
   border-radius: 10px;
@@ -367,17 +407,14 @@ ul.bio-links {
   margin-top: 10px;
 }
 
-
 ul.bio-links li {
   display: inline;
 }
-
 
 ul.bio-links li:not(:first-child) {
   margin-left: 10px;
   
 }
-
 
 section.bio a {
   text-decoration: none;
