--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 header>section {
   background-color: cadetblue;
-  height: 250px;
+  height: 285px;
   width: 100%;
 }
 
@@ -12,10 +12,11 @@ section#logo {
   max-width:100%;
 }
 
+
 section#logo img {
   left: calc(50% - 150px);
   position: absolute;
-  width: 300px;
+  width: 300px; 
 }
 
 nav.horizontal-nav {
@@ -37,6 +38,7 @@ nav.horizontal-nav a {
   color: rgb(82, 21, 78);
   font-size: 1.6em;
   padding: 15px;
+  
 }
 
 nav.horizontal-nav a:first-child {
@@ -96,9 +98,9 @@ section#card-match {
 }
 
 .cat-match-title{
+  color: rgb(104, 104, 105);
   font-size: 2.5em;
   font-family:'Nunito', sans-serif; 
-  color: rgb(104, 104, 105);
   text-transform: uppercase;
   text-align: center;
   padding-bottom: 20px;
@@ -106,10 +108,13 @@ section#card-match {
 }
 
 .story-section{
+  color:rgb(80, 80, 82);
+  font-family: 'Nunito', sans-serif;
   font-size: 2em;
   line-height: 25px;
-  color:rgb(80, 80, 82);
-  font-family: 'Nunito', sans-serif; 
+  text-align: justify;
+  text-justify: inter-word; 
+  
 }
 .card-front {
   backface-visibility: hidden;
@@ -120,16 +125,17 @@ section#card-match {
   width: 100%;
   z-index: 2;
 }
+
 form{
-  font-size: 1.5em;
   color: rgb(104, 104, 105);
   font-family: 'Nunito', sans-serif;
+  font-size: 1.5em;
   padding: 2px;
 }
 div#left-card {
   border: 4px solid cadetblue;
-  
   border-radius: 10px;
+  cursor: pointer;
   height: 350px;
   margin: 25px;
   perspective: 1000px;
@@ -137,47 +143,52 @@ div#left-card {
   transition: transform 1s;
   width: 250px;
 }
+
 div#right-card {
   border: 4px solid cadetblue;
   border-radius: 10px;
+  cursor: pointer;
   height: 350px;
-  width:350px;
   margin: 25px;
+  margin-right: 30px;
   perspective: 1000px;
   transform-style: preserve-3d;
   transition: transform 1s;
-  width: 250px;
-  
+  width:350px;
+  width: 250px; 
 }
+
 .card-back {
-  position: absolute;
-  /* bottom: 0px; */
-  width: 100%;
-  height: 100%;
-  color: white;
-  font-size: 1em;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  vertical-align: middle;
   background-color: rgb(82, 21, 78);
+  border-radius: 5px;
+  color: rgb(196, 193, 193);
+  font-size: .8em;
+  font-family: 'Nunito', sans-serif;
+  height: 100%;
+  line-height: 25px;
+  position: absolute;
+  text-align: center;
   transform: scale(-1, 1);
+  vertical-align: middle;
+  width: 100%;
   z-index: 1;
   }
-  
- 
-  
-  
+
 
 .cat-bio {
   color: white;
   font-size: 1.35em;
-  text-align: left;
   padding: 10px;
+  text-align: left;
 }
 
 section#card-match img {
+  border-radius: 5px;
+  left:14px;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 95%;
+  position: relative;
+  top: 7px;
 }
 
 button {
@@ -208,8 +219,12 @@ footer>nav {
 }
 
 footer>nav a {
-  padding: 5px;
+  padding: 10px;
   text-align: center;
+}
+
+footer>nav a:hover{
+  opacity:50%
 }
 
 footer>nav img {
@@ -218,100 +233,111 @@ footer>nav img {
 
 span#footer-nav-spacer {
   width: 175px;
-  
 }
 
 footer h3 {
-  font-size: 1.2em;
-  padding-top: 30px;
-  text-align: center;
-  font-family: 'Nunito', sans-serif;
   color: grey;
+  font-family: 'Nunito', sans-serif;
+  font-size: 1.2em;
+  line-height: 1px;
+  padding-top: 30px;
+  padding-bottom: 45px;
+  text-align: center;
 }
-  
+
 #welcome{
-  font-size: 5em;
   font-family: 'Oswald', sans-serif;  
+  font-size: 5em;
 }
+
 #matchesontop {
-  font-family:'Oswald', sans-serif;
-  font-size: 8em;
-  line-height: px;
   color: rgb(73, 72, 72);
-  text-shadow: 2px 2px cadetblue;
+  font-family: 'Gruppo', sans-serif;
+  font-size: 9em;
+  line-height: px;
+  padding-bottom: 0px;
+  padding-top: 20px;
   
 }
+
 #oldestontop {
-    text-align: center;
-    font-family:'Oswald', sans-serif;
-    color: rgb(73, 72, 72);
-    font-style: italic;
-    font-size: 3em;
-  
-  
+  color: cadetblue;
+  font-family:'Oswald', sans-serif;
+  font-style: italic;
+  font-size: 3em;
+  padding-bottom: 30px;
+  text-align: center;
 }
+
 #welcomeParagraph {
-    color: rgb(73, 72, 72);
-    font-size: 1.5em;
-    font-family:'Oswald', sans-serif;
-    line-height: 35px;
-  }
+  color: rgb(73, 72, 72);
+  font-size: 1.5em;
+  font-family:'Oswald', sans-serif;
+  line-height: 35px;
+}
   
 #disclaimer {
-    font-family:'Oswald', sans-serif;
-    font-size: 1em;
-    line-height: 45px;
-    color: rgb(80, 80, 80);
+  color: rgb(80, 80, 80);
+  font-family:'Oswald', sans-serif;
+  font-size: 1em;
+  line-height: 45px;
 }
 
 a {
-  font-family:'Nunito', sans-serif;
   color: grey;
+  font-family:'Nunito', sans-serif;
 }
 
 #chrispic {
-  position: relative;
+  border-radius: 15px;
   bottom: 30px;
+  position: relative;
 }
 
 #chrispic:hover{
+  border-radius: 15px;
   opacity:30%;
   transition:3s;
 }
 #paulpic{
-  position: relative;
+  border-radius: 15px;
   bottom: 30px;
+  position: relative;
 }
 
 #paulpic:hover{
+  border-radius: 15px;
   opacity:30%;
   transition:3s;
 }
 
+#lulupic{ 
+  transition:3s;
+  border-radius: 15px;
+}
+
 #lulupic:hover{
+  border-radius: 15px;
   opacity: 30%;
   transition:3s;
 }
-
 
 body{
   background-color: rgb(231, 231, 231);
 }
 
-
-
-
 section.bio img:not(.icon-image) {
   float: left;
-  max-width: 250px;
   padding: 0px 10px 10px 10px;
+  max-width: 250px;
 }
+
 #names{
+  color: rgb(54, 54, 54);
   font-size:3.5em;
   font-family: 'Nunito', sans-serif;
-  text-align: right;
-  color: rgb(54, 54, 54);
   padding-right: 10px;
+  text-align: right;
 }
 
 #meowmatch{
@@ -319,88 +345,107 @@ section.bio img:not(.icon-image) {
   font-size: 1.45em;
 }
  #paul{
-   color:  rgb(231, 231, 231);
-   -webkit-text-stroke: 1.5px rgb(54, 54, 54);
-   font-style: italic;
+  color:  rgb(231, 231, 231);
+  font-style: italic;
+  -webkit-text-stroke: 1.5px rgb(54, 54, 54);
 }
 
 #lulu {
   color:  rgb(231, 231, 231);
-   -webkit-text-stroke: 1.5px rgb(54, 54, 54);
-   font-style: italic;
+  font-style: italic;
+  -webkit-text-stroke: 1.5px rgb(54, 54, 54);
 }
 
 #chris{
   color:  rgb(231, 231, 231);
-   -webkit-text-stroke: 1.5px rgb(54, 54, 54);
-   font-style: italic;
+  font-style: italic;
+  -webkit-text-stroke: 1.5px rgb(54, 54, 54);
 }
 
 #bio-p{
-  font-family: 'Nunito', sans-serif;
   color: black
+  font-family: 'Nunito', sans-serif;
 }
 
 #bio-ppaul{
-  position:relative;
-  line-height: 32px;
   color:  rgb(231, 231, 231);
+  line-height: 40px;
+  padding:9px;
+  position:relative;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 #bio-ppaul:hover{
-  position:relative;
-  line-height: 32px;
   color:  rgb(54, 54, 54);
+  line-height: 40px;
+  padding:9px;
+  position:relative;
   transition: 5s;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 #bio-plulu{
-  line-height: 30px;
   color:  rgb(231, 231, 231);
+  line-height: 36px;
+  padding: 9px;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 #bio-plulu:hover{
-  line-height: 30px;
   color:  rgb(54, 54, 54);
+  line-height: 36px;
+  padding: 9px;
+  text-align: justify;
+  text-justify: inter-word;
   transition: 5s;
 }
 
 #bio-pchris{
-  line-height: 32px;
   color:  rgb(231, 231, 231);
+  line-height: 40px;
+  padding: 7px;
+  text-align: justify;
+  text-justify: inter-word;
 }
+
 #bio-pchris:hover{
-  line-height: 32px;
   color:  rgb(54, 54, 54);
+  line-height: 40px;
+  padding: 7px;
   transition: 5s;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 #bio-p:hover{
-  font-family: 'Nunito', sans-serif;
   color:black;
+  font-family: 'Nunito', sans-serif;
   transition: 1.5s;
 }
 
 section.bio {
   border: 4px solid cadetblue;
   border-radius: 10px;
-  margin: 10px auto;
-  max-width: 75%;
-  padding: 5px;
   clear: left;
+  margin: 10px auto;
+  max-width: 85%;
   overflow: hidden;
+  padding: 5px;
 }
 
 section.bio h3 {
+  font-size: 1.5em;
   margin-bottom: 10px;
   text-align: center;
-  font-size: 1.5em;
 }
 
 section.bio p {
   font-size: 1.25em;
-  margin-bottom: 10px;
   font-family: 'Nunito', sans-serif;
+  margin-bottom: 10px;
 }
 
 ul.bio-links {
@@ -409,6 +454,9 @@ ul.bio-links {
 
 ul.bio-links li {
   display: inline;
+}
+ul.bio-links li:hover{
+  opacity:45%
 }
 
 ul.bio-links li:not(:first-child) {
@@ -421,10 +469,10 @@ section.bio a {
 }
 
 span.social-link-text {
+  bottom: 11px;
   font-size: 1.2em;
   margin-left: 5px;
   position: relative;
-  bottom: 11px;
 }
 
 section.bio img.icon-image {
@@ -441,11 +489,11 @@ section#matches-list {
 }
 
 section.match-section {
-  max-width: 75%;
   border: 4px solid cadetblue;
   border-radius: 10px;
-  margin: 10px auto;
   padding: 10px;
+  margin: 10px auto;
+  max-width: 75%;
 }
 
 section.match-images {
@@ -454,9 +502,18 @@ section.match-images {
 }
 
 section.match-images img {
-  max-width: 30%;
   align-self: center;
+  border-radius: 15px;
+  max-width: 25%;
   margin-bottom: 30px;
+  padding: 20px 20px 0px 20px;
+}
+section.match-images img:hover {
+  align-self: center;
+  border-radius: 15px;
+  margin-bottom: 30px;
+  max-width: 30%;
+  transition:2s;
 }
 
 section.match-images img.left-match-image {
